# minimal-stm32-cpp

./: .gitignore  01_configure  02_build  03_flash  98_clean  CMakeLists.txt
BSP/: STM32F413ZHTX_FLASH.ld
BSP/Core/Inc/: main.h
BSP/Core/Src/: main.cpp  stm32f4xx_hal_msp.c
app/: app.hpp  led_controller.cpp  led_controller.hpp  loop.cpp  setup.cpp
